# tauri-gym-app

./: .env.example  .gitignore  ARCHITECTURE.md  DOMAIN_ARCHITECTURE.md  README.md  TESTING_CHECKLIST.md  UPDATE_SERVER_SETUP.md  command.txt  eslint.config.js  index.html  package-lock.json  package.json  update-server.json  vitest.config.js
src/: App.jsx  index.css  main.jsx  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/config/: api_keys.example.rs  db.rs  mod.rs
src-tauri/src/models/: exercise.rs  mod.rs  person.rs  routine.rs  routine_exercise.rs  workout_entry.rs
src-tauri/src/repository/: exercise_repository.rs  mod.rs  person_repository.rs  routine_exercise_repository.rs  routine_repository.rs  sqlite_exercise_repository.rs  sqlite_person_repository.rs  sqlite_routine_exercise_repository.rs  sqlite_routine_repository.rs  sqlite_workout_entry_repository.rs  workout_entry_repository.rs
src-tauri/src/services/: backup_service.rs  exercise_service.rs  mod.rs  person_service.rs  routine_service.rs  updater_service.rs  workout_entry_service.rs
src/components/: COMPONENT_TREE.md  README.md  Updater.tsx  index.ts
src/config/: layout.ts
src/constants/: errorMessages.ts
src/domains/: index.ts
src/hooks/: useDashboardController.ts  useDashboardData.ts  useDashboardModals.ts  useDeleteEventHandlers.ts  useRoutineOperations.ts  useToastNotifications.ts  useWeeklyCalendar.ts  useWorkoutOperations.ts
src/pages/: ConfiguracionesPage.jsx  Dashboard.tsx  DashboardRefactored.tsx  (+3 more)
(+230 files in other folders)
